# ray_tracing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/: basic.frag
enc_temp_folder/3b4a56e86c232f7acb0c3bff33d4615/: main.cpp
src/: camera.cpp  camera.hpp  common.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  main.cpp  material.cpp  material.hpp  random.cpp  random.hpp  random_scene.cpp  random_scene.hpp  ray.hpp  ray_tracer.cpp  ray_tracer.hpp  shader_utils.cpp  sphere.cpp  sphere.hpp  vec3.hpp  vector3.hpp
